Agentforce/force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store a log of any apex transactions</description>
    <label>Salesforce Error Log</label>
    <nameField>
        <displayFormat>ELOG-{000000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>