Agentforce/force-app/main/default/objects/Error_Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>This field determines the level of the log</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>