Agentforce/force-app/main/default/objects/Error_Log__c/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <description>This will contain any of the messages that have been written to the log</description>
    <label>Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>