Agentforce/force-app/main/default/objects/Error_Log__c/fields/Origin_Name__c.field-meta.xml
<CustomField>
    <fullName>Origin_Name__c</fullName>
    <description>The flow / apex that the error message originated from. Used as a further descriptor for reporting and debugging.</description>
    <label>Origin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>