Agentforce/force-app/main/default/objects/Error_Log__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>IF($Organization.Id = &quot;00DUE000005ebSb&quot;, &quot;https://ocsgroup.my.salesforce.com/&quot;&amp;Record_Id__c , &quot;unavailable&quot;)</formula>
    <label>Record</label>
    <type>Text</type>
</CustomField>