Agentforce/force-app/main/default/objects/Error_Log__c/fields/Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Summary__c</fullName>
    <label>Resolution Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>