Agentforce/force-app/main/default/objects/Error_Log__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <label>Resolved</label>
    <type>Date</type>
</CustomField>