Agentforce/force-app/main/default/objects/Error_Log__c/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <label>Reviewed</label>
    <type>Date</type>
</CustomField>