Agentforce/force-app/main/default/objects/Error_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is used to easily identify where the log has come from, it is a picklist to make filtering in list views/reports easier.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Screenflow</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>