Agentforce/force-app/main/default/objects/Error_Log__c/listViews/Screenflow_Errors.listView-meta.xml
<ListView>
    <fullName>Screenflow_Errors</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>Type__c</columns>
    <columns>Messages__c</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Origin_Name__c</field>
        <operation>contains</operation>
        <value>screenflow</value>
    </filters>
    <label>Screenflow Errors</label>
</ListView>