Agentforce/force-app/main/default/objects/Error_Log__c/listViews/This_Year_Errors.listView-meta.xml
<ListView>
    <fullName>This_Year_Errors</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Messages__c</columns>
    <columns>Origin_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>This Year Errors</label>
</ListView>