Agentforce/force-app/main/default/objects/Error_Log__c/listViews/Warnings.listView-meta.xml
<ListView>
    <fullName>Warnings</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>Type__c</columns>
    <columns>Messages__c</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Warning</value>
    </filters>
    <label>Warnings</label>
</ListView>